본인 확인 로직 추가와 접근 실패 예외 세분화